# xbase

./: Makefile.am  README.md  bld  configure.ac  slack-desc
examples/data/: NEWDBF.dbf
examples/source/C/: EX1.C  TRANSFER.C  d4verify.c  ex1.c  relate1.c  seeker.c
examples/source/c/: append.c  bank.c  capieg.c  copydat2.c  copydata.c  custlist.c  d4test.c  d4verify.c  datainfo.c  date1.c  deletion.c  ex0.c  ex1.c  ex10.c  ex100.c  ex101.c  ex102.c  ex103.c  ex104.c  ex105.c  ex106.c  ex107.c  ex108.c  ex109.c  ex11.c  ex110.c  ex111.c  ex112.c  ex113.c  ex114.c  ex115.c  ex116.c  ex117.c  ex118.c  ex119.c  ex12.c  ex120.c  ex121.c  ex122.c  ex123.c  (+124 more)
examples/source/cc/: ex1.cc
source/: D4DATE.C  D4INLINE.H  D4all.h  Makefile.am  b4block.c  b4node.c  c4.c  c4baspas.c  c4bcd.c  c4blast.c  c4buffer.c  c4code.c  c4com.c  c4com.h  c4com2.c  c4comlow.h  c4comws.h  c4conect.c  c4conlow.c  c4const.c  c4hook.c  c4long.c  c4set.c  c4thread.c  c4trans.c  c4trans.h  c4util.c  coll4arr.c  d4all.h  d4all.hpp  d4alloriginal.h  d4append.c  d4bottom.c  d4cb51.h  d4close.c  d4config.h.in  d4create.c  d4data.c  d4data.h  d4data.hpp  (+139 more)
