# $Id: Makefile.am,v 1.1.1.1 2004/08/05 21:47:57 caso Exp $

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
CCOPTS= -DNO_FORK
SUBDIRS= source 
EXTRA_DIST = configure.ac

check_PROGRAMS= ex1 ex2 ex3 ex4 ex5 ex6 ex7 ex8 ex9 ex10 ex11 ex12 ex13 ex14 ex15 ex16 ex17 ex18 ex19 \
 ex20 ex21 ex22 ex23 ex24 ex25 ex26 ex27 ex28 ex29 
check_PROGRAMS+= ex30 ex31 ex32 ex33 ex34 ex35 ex36 ex37 ex38 ex39 
check_PROGRAMS+= ex40 ex41 ex42 ex43 ex44 ex45 ex46 ex47 ex48 ex49 
check_PROGRAMS+= ex50 ex51 ex52 ex53 ex54 ex55 ex56 ex57 ex58 ex59 
check_PROGRAMS+= ex60 ex61 ex62 ex63 ex64 ex65 ex66 ex67 ex68 ex69 
check_PROGRAMS+= ex70 ex71 ex72 ex73 ex74 ex75 ex76 ex77 ex78 ex79 
check_PROGRAMS+= ex80 ex81 ex82 ex83 ex84 ex85 ex86 ex87 ex88 ex89 
check_PROGRAMS+= ex90 ex91 ex92 ex93 ex94 ex95 ex96 ex97 ex98 ex99 
check_PROGRAMS+= ex100 ex101 ex102 ex103 ex104 ex105 ex106 ex107 ex108 ex109 
check_PROGRAMS+= ex110 ex111 ex112 ex113 ex114 ex115 ex116 ex117 ex118 ex119 
check_PROGRAMS+= ex120 ex121 ex122 ex123 ex124 ex125 ex126 ex127 ex128 ex129 
check_PROGRAMS+= ex130 ex131 

check_PROGRAMS+= seeker append bank capieg copydat2 copydata custlist d4test d4verify datainfo date1 deletion
check_PROGRAMS+= relate1 relate2 relate3 relate4  

relate1_SOURCES=examples/source/c/relate1.c
relate2_SOURCES=examples/source/c/relate2.c
relate3_SOURCES=examples/source/c/relate3.c
relate4_SOURCES=examples/source/c/relate4.c

ex1_SOURCES=examples/source/c/ex1.c 
ex2_SOURCES=examples/source/c/ex2.c 
ex3_SOURCES=examples/source/c/ex3.c 
ex4_SOURCES=examples/source/c/ex4.c 
ex5_SOURCES=examples/source/c/ex5.c 
ex6_SOURCES=examples/source/c/ex6.c 
ex7_SOURCES=examples/source/c/ex7.c 
ex8_SOURCES=examples/source/c/ex8.c 
ex9_SOURCES=examples/source/c/ex9.c 

ex10_SOURCES=examples/source/c/ex10.c 
ex11_SOURCES=examples/source/c/ex11.c 
ex12_SOURCES=examples/source/c/ex12.c 
ex13_SOURCES=examples/source/c/ex13.c 
ex14_SOURCES=examples/source/c/ex14.c 
ex15_SOURCES=examples/source/c/ex15.c 
ex16_SOURCES=examples/source/c/ex16.c 
ex17_SOURCES=examples/source/c/ex17.c 
ex18_SOURCES=examples/source/c/ex18.c 
ex19_SOURCES=examples/source/c/ex19.c 

ex20_SOURCES=examples/source/c/ex20.c 
ex21_SOURCES=examples/source/c/ex21.c 
ex22_SOURCES=examples/source/c/ex22.c 
ex23_SOURCES=examples/source/c/ex23.c 
ex24_SOURCES=examples/source/c/ex24.c 
ex25_SOURCES=examples/source/c/ex25.c 
ex26_SOURCES=examples/source/c/ex26.c 
ex27_SOURCES=examples/source/c/ex27.c 
ex28_SOURCES=examples/source/c/ex28.c 
ex29_SOURCES=examples/source/c/ex29.c 

ex30_SOURCES=examples/source/c/ex30.c 
ex31_SOURCES=examples/source/c/ex31.c 
ex32_SOURCES=examples/source/c/ex32.c 
ex33_SOURCES=examples/source/c/ex33.c 
ex34_SOURCES=examples/source/c/ex34.c 
ex35_SOURCES=examples/source/c/ex35.c 
ex36_SOURCES=examples/source/c/ex36.c 
ex37_SOURCES=examples/source/c/ex37.c 
ex38_SOURCES=examples/source/c/ex38.c 
ex39_SOURCES=examples/source/c/ex39.c 

ex40_SOURCES=examples/source/c/ex40.c 
ex41_SOURCES=examples/source/c/ex41.c 
ex42_SOURCES=examples/source/c/ex42.c 
ex43_SOURCES=examples/source/c/ex43.c 
ex44_SOURCES=examples/source/c/ex44.c 
ex45_SOURCES=examples/source/c/ex45.c 
ex46_SOURCES=examples/source/c/ex46.c 
ex47_SOURCES=examples/source/c/ex47.c 
ex48_SOURCES=examples/source/c/ex48.c 
ex49_SOURCES=examples/source/c/ex49.c 

ex50_SOURCES=examples/source/c/ex50.c 
ex51_SOURCES=examples/source/c/ex51.c 
ex52_SOURCES=examples/source/c/ex52.c 
ex53_SOURCES=examples/source/c/ex53.c 
ex54_SOURCES=examples/source/c/ex54.c 
ex55_SOURCES=examples/source/c/ex55.c 
ex56_SOURCES=examples/source/c/ex56.c 
ex57_SOURCES=examples/source/c/ex57.c 
ex58_SOURCES=examples/source/c/ex58.c 
ex59_SOURCES=examples/source/c/ex59.c 

ex60_SOURCES=examples/source/c/ex60.c 
ex61_SOURCES=examples/source/c/ex61.c 
ex62_SOURCES=examples/source/c/ex62.c 
ex63_SOURCES=examples/source/c/ex63.c 
ex64_SOURCES=examples/source/c/ex64.c 
ex65_SOURCES=examples/source/c/ex65.c 
ex66_SOURCES=examples/source/c/ex66.c 
ex67_SOURCES=examples/source/c/ex67.c 
ex68_SOURCES=examples/source/c/ex68.c 
ex69_SOURCES=examples/source/c/ex69.c 

ex70_SOURCES=examples/source/c/ex70.c 
ex71_SOURCES=examples/source/c/ex71.c 
ex72_SOURCES=examples/source/c/ex72.c 
ex73_SOURCES=examples/source/c/ex73.c 
ex74_SOURCES=examples/source/c/ex74.c 
ex75_SOURCES=examples/source/c/ex75.c 
ex76_SOURCES=examples/source/c/ex76.c 
ex77_SOURCES=examples/source/c/ex77.c 
ex78_SOURCES=examples/source/c/ex78.c 
ex79_SOURCES=examples/source/c/ex79.c 

ex80_SOURCES=examples/source/c/ex80.c 
ex81_SOURCES=examples/source/c/ex81.c 
ex82_SOURCES=examples/source/c/ex82.c 
ex83_SOURCES=examples/source/c/ex83.c 
ex84_SOURCES=examples/source/c/ex84.c 
ex85_SOURCES=examples/source/c/ex85.c 
ex86_SOURCES=examples/source/c/ex86.c 
ex87_SOURCES=examples/source/c/ex87.c 
ex88_SOURCES=examples/source/c/ex88.c 
ex89_SOURCES=examples/source/c/ex89.c 

ex90_SOURCES=examples/source/c/ex90.c 
ex91_SOURCES=examples/source/c/ex91.c 
ex92_SOURCES=examples/source/c/ex92.c 
ex93_SOURCES=examples/source/c/ex93.c 
ex94_SOURCES=examples/source/c/ex94.c 
ex95_SOURCES=examples/source/c/ex95.c 
ex96_SOURCES=examples/source/c/ex96.c 
ex97_SOURCES=examples/source/c/ex97.c 
ex98_SOURCES=examples/source/c/ex98.c 
ex99_SOURCES=examples/source/c/ex99.c 

ex100_SOURCES=examples/source/c/ex100.c 
ex101_SOURCES=examples/source/c/ex101.c 
ex102_SOURCES=examples/source/c/ex102.c 
ex103_SOURCES=examples/source/c/ex103.c 
ex104_SOURCES=examples/source/c/ex104.c 
ex105_SOURCES=examples/source/c/ex105.c 
ex106_SOURCES=examples/source/c/ex106.c 
ex107_SOURCES=examples/source/c/ex107.c 
ex108_SOURCES=examples/source/c/ex108.c 
ex109_SOURCES=examples/source/c/ex109.c 

ex110_SOURCES=examples/source/c/ex110.c 
ex111_SOURCES=examples/source/c/ex111.c 
ex112_SOURCES=examples/source/c/ex112.c 
ex113_SOURCES=examples/source/c/ex113.c 
ex114_SOURCES=examples/source/c/ex114.c 
ex115_SOURCES=examples/source/c/ex115.c 
ex116_SOURCES=examples/source/c/ex116.c 
ex117_SOURCES=examples/source/c/ex117.c 
ex118_SOURCES=examples/source/c/ex118.c 
ex119_SOURCES=examples/source/c/ex119.c 

ex120_SOURCES=examples/source/c/ex120.c 
ex121_SOURCES=examples/source/c/ex121.c 
ex122_SOURCES=examples/source/c/ex122.c 
ex123_SOURCES=examples/source/c/ex123.c 
ex124_SOURCES=examples/source/c/ex124.c 
ex125_SOURCES=examples/source/c/ex125.c 
ex126_SOURCES=examples/source/c/ex126.c 
ex127_SOURCES=examples/source/c/ex127.c 
ex128_SOURCES=examples/source/c/ex128.c 
ex129_SOURCES=examples/source/c/ex129.c 

ex130_SOURCES=examples/source/c/ex130.c 
ex131_SOURCES=examples/source/c/ex131.c 



seeker_SOURCES=examples/source/c/seeker.c 

append_SOURCES=examples/source/c/seeker.c 
bank_SOURCES=examples/source/c/bank.c 
capieg_SOURCES=examples/source/c/capieg.c 
copydat2_SOURCES=examples/source/c/copydat2.c 
copydata_SOURCES=examples/source/c/copydata.c 

custlist_SOURCES=examples/source/c/custlist.c 
d4test_SOURCES=examples/source/c/d4test.c 
d4verify_SOURCES=examples/source/c/d4verify.c 
datainfo_SOURCES=examples/source/c/datainfo.c 
date1_SOURCES=examples/source/c/date1.c 
deletion_SOURCES=examples/source/c/deletion.c 

LDADD= $(top_builddir)/source/libxbase.la

library_includedir= $(includedir)/xbase
library_include_HEADERS=source/d4all.h 


if BUILDING_SLACK

slack:
	make install DESTDIR=$(abs_builddir)/pkg.${build_cpu}
	$(MKDIR_P) $(abs_builddir)/pkg.${build_cpu}/install
	cp ${top_srcdir}/slack-desc $(abs_builddir)/pkg.${build_cpu}/install
	find $(abs_builddir)/pkg.${build_cpu}/ -name "*.la" | xargs rm
	cd $(abs_builddir)/pkg.${build_cpu}; ${SLACKBUILD} -l y -c n $(abs_builddir)/${PACKAGE}-${VERSION}-${build_cpu}-${SVN_BUILD}.txz
#	cp $(abs_builddir)/../../${build_cpu}/${PACKAGE}-${VERSION}-${build_cpu}-${SVN_BUILD}.txz /var/cache/packages/${build_cpu}/extra/${PACKAGE}-${VERSION}-${build_cpu}-${SVN_BUILD}.txz

else

slack:
	echo "No slackware package requested ${PACKAGE}-${VERSION}-${SVN_BUILD}"
endif


